tests/sksl/errors/DoTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'bool', but found 'float2'
    do {} while (float2(1));
                 ^^^^^^^^^
1 error
